Frax Formatting Updates

--- a/_data/reports/2022-09-frax.md
+++ b/_data/reports/2022-09-frax.md
@@ -982,10 +982,9 @@ Update `currentWithheldETH` in `recoverEther` :
 **[FortisFortuna (Frax) commented](https://github.com/code-423n4/2022-09-frax-findings/issues/346#issuecomment-1258347198):**
  > @denett<br>
 > withholdRatio is is not an iron rule and can be updated by the owner at will. recoverEther will likely only be used when we are migrating to a new minting contract, so the accounting in that case is no longer important.
-> 
 
 **[0xean (judge) commented](https://github.com/code-423n4/2022-09-frax-findings/issues/346#issuecomment-1278281505):**
- > #346 has some great suggestion in it on ensuring user safety in an emergency scenario and think that both of these issues do highlight a valid concern that ultimately could affect the protocol in an emergency scenario. 
+ > Issue 346 has some great suggestions in it on ensuring user safety in an emergency scenario and think that both of these issues do highlight a valid concern that ultimately could affect the protocol in an emergency scenario. 
 
 
 
@@ -1522,7 +1521,7 @@ Gas savings are estimated using the gas report of existing `FORGE_GAS_REPORT=tru
 
 *   Maximum Method Call. Gas Saved: **538 343**
 
-##### - src/OperatorRegistry.sol:[107-116](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L107-L116)
+### src/OperatorRegistry.sol:[107-116](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L107-L116)
 
 ```diff
 diff --git a/src/OperatorRegistry.sol b/src/OperatorRegistry.sol
@@ -1567,7 +1566,7 @@ index f81094c..6732da9 100644
 
 *   Maximum Method Call. Gas Saved: **1 902**
 
-##### - src/ERC20/ERC20PermitPermissionedMint.sol:[40](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L40), [45](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L45)
+### src/ERC20/ERC20PermitPermissionedMint.sol:[40](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L40), [45](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L45)
 
 ```diff
 diff --git a/src/ERC20/ERC20PermitPermissionedMint.sol b/src/ERC20/ERC20PermitPermissionedMint.sol
@@ -1637,7 +1636,7 @@ index 3bed26d..78da7f1 100644
    97, 100:         emit TimelockChanged(_timelock_address);
 ```
 
-##### - src/OperatorRegistry.sol:[45](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L45)
+### src/OperatorRegistry.sol:[45](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L45)
 
 ```diff
 diff --git a/src/OperatorRegistry.sol b/src/OperatorRegistry.sol
@@ -1735,7 +1734,7 @@ index f81094c..fc5d16d 100644
   205, 212:         emit TimelockChanged(_timelock_address);
 ```
 
-##### - src/frxETHMinter.sol:[link](https://github.com/code-423n4/2022-09-frax/blob/main/src/frxETHMinter.sol)
+### src/frxETHMinter.sol:[link](https://github.com/code-423n4/2022-09-frax/blob/main/src/frxETHMinter.sol)
 
 ```diff
 diff --git a/src/frxETHMinter.sol b/src/frxETHMinter.sol
@@ -1815,7 +1814,7 @@ index 4565883..2690157 100644
 
 Custom errors are available from solidity version 0.8.4. Custom errors save \~50 gas each time they're hitby [avoiding having to allocate and store the revert string](https://blog.soliditylang.org/2021/04/21/custom-errors/#errors-in-depth). Not defining the strings also save deployment gas
 
-##### - src/ERC20/ERC20PermitPermissionedMint.sol:[41](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L41), [46](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L46), [66](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L66), [68](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L68), [77-78](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L77-L78), [95](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L95)
+### src/ERC20/ERC20PermitPermissionedMint.sol:[41](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L41), [46](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L46), [66](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L66), [68](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L68), [77-78](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L77-L78), [95](https://github.com/code-423n4/2022-09-frax/blob/main/src/ERC20/ERC20PermitPermissionedMint.sol#L95)
 
 ```diff
 diff --git a/src/ERC20/ERC20PermitPermissionedMint.sol b/src/ERC20/ERC20PermitPermissionedMint.sol
@@ -1886,7 +1885,7 @@ index 3bed26d..758ca2a 100644
    98, 106:     }
 ```
 
-##### - src/OperatorRegistry.sol:[46](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L46), [137](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L137), [182](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L182), [203](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L203)
+### src/OperatorRegistry.sol:[46](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L46), [137](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L137), [182](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L182), [203](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L203)
 
 ```diff
 diff --git a/src/OperatorRegistry.sol b/src/OperatorRegistry.sol
@@ -1944,7 +1943,7 @@ index f81094c..ac3b7a1 100644
   206, 212:     }
 ```
 
-##### - src/frxETHMinter.sol:[79](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L79), [87-88](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L87-L88), [122](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L122), [126](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L126), [140](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L140), [167](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L167), [171](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L171), [193](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L193), [200](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L200)
+### src/frxETHMinter.sol:[79](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L79), [87-88](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L87-L88), [122](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L122), [126](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L126), [140](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L140), [167](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L167), [171](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L171), [193](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L193), [200](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L200)
 
 ```diff
 diff --git a/src/frxETHMinter.sol b/src/frxETHMinter.sol
@@ -2045,7 +2044,7 @@ index 4565883..f3b5abe 100644
   203, 214:     }
 ```
 
-##### - test/frxETHMinter.t.sol
+### test/frxETHMinter.t.sol
 
 ```diff
 diff --git a/test/frxETHMinter.t.sol b/test/frxETHMinter.t.sol
@@ -2116,7 +2115,7 @@ index f4d6265..9529428 100644
   309, 309:         // Deposit another 32 ETH for frxETH.
 ```
 
-##### - test/frxETH_sfrxETH_combo.t.sol
+### test/frxETH_sfrxETH_combo.t.sol
 
 ```diff
 diff --git a/test/frxETH_sfrxETH_combo.t.sol b/test/frxETH_sfrxETH_combo.t.sol
@@ -2165,7 +2164,7 @@ index 5fd1612..be1236c 100644
 
 Use uint256(1) and uint256(2) for true/false to avoid a Gwarmaccess (100 gas) for the extra SLOAD, and to avoid Gsset (20000 gas) when changing from 'false' to 'true', after having been 'true' in the past
 
-##### - src/ERC20/ERC20PermitPermissionedMint.sol:[20](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L20)
+### src/ERC20/ERC20PermitPermissionedMint.sol:[20](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L20)
 
 ```diff
 diff --git a/src/ERC20/ERC20PermitPermissionedMint.sol b/src/ERC20/ERC20PermitPermissionedMint.sol
@@ -2212,7 +2211,7 @@ index 3bed26d..a5d0aab 100644
    81,  81:         delete minters[minter_address];
 ```
 
-##### - src/frxETHMinter.sol:[43](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L43), [49-50](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L49-L50)
+### src/frxETHMinter.sol:[43](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L43), [49-50](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L49-L50)
 
 ```diff
 diff --git a/src/frxETHMinter.sol b/src/frxETHMinter.sol
@@ -2318,7 +2317,7 @@ index 4565883..3036cea 100644
 
 Solidity version 0.8+ comes with implicit overflow and underflow checks on unsigned integers. When an overflow or an underflow isn't possible (as an example, when a comparison is made before the arithmetic operation), some gas can be saved by using an unchecked block: <https://docs.soliditylang.org/en/v0.8.10/control-structures.html#checked-or-unchecked-arithmetic>
 
-##### - src/ERC20/ERC20PermitPermissionedMint.sol:[84](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L84)
+### src/ERC20/ERC20PermitPermissionedMint.sol:[84](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L84)
 
 ```diff
 diff --git a/src/ERC20/ERC20PermitPermissionedMint.sol b/src/ERC20/ERC20PermitPermissionedMint.sol
@@ -2343,7 +2342,7 @@ index 3bed26d..25010cb 100644
    91,  94:         emit MinterRemoved(minter_address);
 ```
 
-##### - src/OperatorRegistry.sol:[63](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L63), [84](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L84), [114](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L114)
+### src/OperatorRegistry.sol:[63](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L63), [84](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L84), [114](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L114)
 
 ```diff
 diff --git a/src/OperatorRegistry.sol b/src/OperatorRegistry.sol
@@ -2393,7 +2392,7 @@ index f81094c..aef4e17 100644
   120, 129:
 ```
 
-##### - src/frxETHMinter.sol:[96](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L96), [129](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L129)
+### src/frxETHMinter.sol:[96](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L96), [129](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L129)
 
 ```diff
 diff --git a/src/frxETHMinter.sol b/src/frxETHMinter.sol
@@ -2444,7 +2443,7 @@ index 4565883..4cee757 100644
 
 *   Maximum Method Call. Gas Saved: **2 487**
 
-##### - src/OperatorRegistry.sol:[161](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L161)
+### src/OperatorRegistry.sol:[161](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/OperatorRegistry.sol#L161)
 
 ```diff
 diff --git a/src/OperatorRegistry.sol b/src/OperatorRegistry.sol
@@ -2474,7 +2473,7 @@ index f81094c..b7b094d 100644
 
 *   Maximum Method Call. Gas Saved: **101**
 
-##### - src/frxETHMinter.sol:[97](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L97), [168](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L168)
+### src/frxETHMinter.sol:[97](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L97), [168](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L168)
 
 ```diff
 diff --git a/src/frxETHMinter.sol b/src/frxETHMinter.sol
@@ -2501,7 +2500,7 @@ index 4565883..a591be9 100644
   171, 171:         require(success, "Invalid transfer");
 ```
 
-##### - src/xERC4626.sol:[67](https://github.com/corddry/ERC4626/blob/643cd044fac34bcbf64e1c3790a5126fec0dbec1/src/xERC4626.sol#L67), [72](https://github.com/corddry/ERC4626/blob/643cd044fac34bcbf64e1c3790a5126fec0dbec1/src/xERC4626.sol#L72)
+### src/xERC4626.sol:[67](https://github.com/corddry/ERC4626/blob/643cd044fac34bcbf64e1c3790a5126fec0dbec1/src/xERC4626.sol#L67), [72](https://github.com/corddry/ERC4626/blob/643cd044fac34bcbf64e1c3790a5126fec0dbec1/src/xERC4626.sol#L72)
 
 ```diff
 diff --git a/src/xERC4626.sol b/src/xERC4626.sol
@@ -2539,7 +2538,7 @@ index a8a4726..dea5982 100644
 
 If a variable is not set/initialized, it is assumed to have the default value (0 for uint, false for bool, address(0) for address...). Explicitly initializing it with its default value is an anti-pattern and wastes gas.
 
-##### - src/frxETHMinter.sol:[63-64](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L63-L64)
+### src/frxETHMinter.sol:[63-64](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L63-L64)
 
 ```diff
 diff --git a/src/frxETHMinter.sol b/src/frxETHMinter.sol
@@ -2569,7 +2568,7 @@ index 4565883..b0f66a8 100644
 
 *   Maximum Method Call. Gas Saved: **55**
 
-##### - src/ERC20/ERC20PermitPermissionedMint.sol:[46](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L46), [68](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L68), [78](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L78)
+### src/ERC20/ERC20PermitPermissionedMint.sol:[46](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L46), [68](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L68), [78](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/ERC20/ERC20PermitPermissionedMint.sol#L78)
 
 ```diff
 diff --git a/src/ERC20/ERC20PermitPermissionedMint.sol b/src/ERC20/ERC20PermitPermissionedMint.sol
@@ -2617,7 +2616,7 @@ index 3bed26d..860d2c4 100644
 
 *   Maximum Method Call. Gas Saved: **4 839**
 
-##### - src/frxETHMinter.sol:[95-96](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L95-L96)
+### src/frxETHMinter.sol:[95-96](https://github.com/code-423n4/2022-09-frax/blob/55ea6b1ef3857a277e2f47d42029bc0f3d6f9173/src/frxETHMinter.sol#L95-L96)
 
 ```diff
 diff --git a/src/frxETHMinter.sol b/src/frxETHMinter.sol
