Fix invalid block/languages

--- a/_data/reports/2021-05-nftx.md
+++ b/_data/reports/2021-05-nftx.md
@@ -471,11 +471,11 @@ Recommend considering adding a check to make sure ```_rangeStart<=_rangeEnd```
 
 Recommend changing this:
 
-```function rescueTokens(uint256 _address) external override onlyOwner {```
+`function rescueTokens(uint256 _address) external override onlyOwner {`
 
 To this:
 
-```function rescueTokens(address _address) external override onlyOwner {```
+`function rescueTokens(address _address) external override onlyOwner {`
 
 **- [0xKiwi (NFTX) confirmed](https://github.com/code-423n4/2021-05-nftx-findings/issues/89)**
 
