--- a/_data/reports/2022-06-canto.md
+++ b/_data/reports/2022-06-canto.md
@@ -817,7 +817,8 @@ Instead of a `if (address(_accountant) != address(0))` statement, an additional 
 
 Change this
 
-```if (address(_accountant) != address(0)){
+```
+if (address(_accountant) != address(0)){
             require(msg.sender == admin, "CNote::_setAccountantContract:Only admin may call this function");
         }
 ```
