--- a/_data/reports/2022-08-rigor.md
+++ b/_data/reports/2022-08-rigor.md
@@ -2473,7 +2473,8 @@ File: Community.sol [Line 353](https://github.com/code-423n4/2022-08-rigor/blob/
 **Proof**<br>
 **The following tests were carried out in remix with both optimization turned on and off**
 
-```function multiple (uint a) public pure returns (uint){
+```
+function multiple (uint a) public pure returns (uint){
 	require ( a > 1 && a < 5, "Initialized");
 	return  a + 2;
 }
@@ -2485,7 +2486,8 @@ File: Community.sol [Line 353](https://github.com/code-423n4/2022-08-rigor/blob/
 
 After splitting the require statement
 
-```function multiple(uint a) public pure returns (uint){
+```
+function multiple(uint a) public pure returns (uint){
 	require (a > 1 ,"Initialized");
 	require (a < 5 , "Initialized");
 	return a + 2;
