--- a/_data/reports/2021-04-vader.md
+++ b/_data/reports/2021-04-vader.md
@@ -712,14 +712,16 @@ Recommend that the `_transfer()` function should be updated to only exclude tran
 Most of the solidity contracts have an init function that everyone can call.
 This could lead to a race condition when the contract is deployed. At that moment a hacker could call the `init` function and make the deployed contracts useless. Then it would have to be redeployed, costing a lot of gas.
 
-DAO.sol:    ```function init(address _vader, address _usdv, address _vault) public {
+```
+DAO.sol:    function init(address _vader, address _usdv, address _vault) public {
 Factory.sol:    function init(address _pool) public {
 Pools.sol:    function init(address _vader, address _usdv, address _router, address _factory) public {
 Router.sol:    function init(address _vader, address _usdv, address _pool) public {
 USDV.sol:    function init(address _vader, address _vault, address _router) external {
 Utils.sol:    function init(address _vader, address _usdv, address _router, address _pools, address _factory) public {
 Vader.sol:    function init(address _vether, address _USDV, address _utils) external {
-Vault.sol:    function init(address _vader, address _usdv, address _router, address _factory, address _pool) public {```
+Vault.sol:    function init(address _vader, address _usdv, address _router, address _factory, address _pool) public {
+```
 
 Recommend adding a check to the `init` function, for example that only the deployer can call the function.
 
@@ -911,17 +913,17 @@ This line of code will cause a perpetual drift of era times, causing each era to
 
 Recommend that In `Vader.sol`, change this:
 
-```nextEraTime = block.timestamp + secondsPerEra;```
+`nextEraTime = block.timestamp + secondsPerEra;`
 
 to this:
 
-```nextEraTime = nextEraTime + secondsPerEra;```
+`nextEraTime = nextEraTime + secondsPerEra;`
 
 ## [[L-09] `_recordBurn` does not handle 0 _eth appropriately](https://github.com/code-423n4/2021-04-vader-findings/issues/269)
 
 Contract Vether4 function `_recordBurn` does not check that ```_eth > 0```, thus it is possible to pass this check multiple times:
 
-```if (mapEraDay_MemberUnits[_era][_day][_member] == 0)```
+`if (mapEraDay_MemberUnits[_era][_day][_member] == 0)`
 
 If the user hasn't contributed to this day yet, it updates `mapMemberEra_Days`, `mapEraDay_MemberCount`, and `mapEraDay_Members`. However, when `msg.value` is 0, it is possible to trigger this condition again and again as `mapEraDay_MemberUnits` still remains 0.
 
