ENS report - minor formatting update

--- a/_data/reports/2022-07-ens.md
+++ b/_data/reports/2022-07-ens.md
@@ -30,7 +30,7 @@ During the audit contest outlined in this document, C4 conducted an analysis of 
   1. [csanuragjain](https://twitter.com/csanuragjain)
   1. 0x1f8b
   1. [wastewa](https://twitter.com/WahWaste)
-  1. Aussie_Battlers ([sseefried](http://seanseefried.org/blog) and [oyc_109](https://twitter.com/andyfeili))
+  1. Aussie\_Battlers ([sseefried](http://seanseefried.org/blog) and [oyc\_109](https://twitter.com/andyfeili))
   1. brgltd
   1. cryptphi
   1. peritoflores
