Minor formatting fixes

--- a/_data/reports/2022-08-frax.md
+++ b/_data/reports/2022-08-frax.md
@@ -108,7 +108,7 @@ During the audit contest outlined in this document, C4 conducted an analysis of 
   1. [hyh](https://twitter.com/0xhyh)
   1. 0xsolstars ([Varun_Verma](twitter.com/versatile_crypt) and masterchief)
   1. 0xmatt
-  1. The_GUILD ([David_](https://twitter.com/davidpius10), [Ephraim](https://twitter.com/iamephraim_js),  LeoGold,  and greatsamist)
+  1. The\_GUILD ([David\_](https://twitter.com/davidpius10), [Ephraim](https://twitter.com/iamephraim_js),  LeoGold,  and greatsamist)
   1. 0xNineDec
   1. dipp
   1. [Chinmay](https://twitter.com/dev_chinmayf)
@@ -976,7 +976,7 @@ If creation code length is 13K or less:
 ***
 
 ## [[M-04] Wrong percent for `FraxlendPairCore.dirtyLiquidationFee`.](https://github.com/code-423n4/2022-08-frax-findings/issues/238)
-_Submitted by auditor0517, also found by \_Adam, 0xA5DF, cccz, minhquanym, minhtrng, and zzzitron_
+*Submitted by auditor0517, also found by \_Adam, 0xA5DF, cccz, minhquanym, minhtrng, and zzzitron*
 
 After confirming with the sponsor, `dirtyLiquidationFee` is 90% of `cleanLiquidationFee` like the [comment](https://github.com/code-423n4/2022-08-frax/blob/c4189a3a98b38c8c962c5ea72f1a322fbc2ae45f/src/contracts/FraxlendPairCore.sol#L194).
 
@@ -1003,7 +1003,7 @@ We should change `9000` to `90000`.
 ***
 
 ## [[M-05] Liquidator might end up paying much more asset than collateral received](https://github.com/code-423n4/2022-08-frax-findings/issues/99)
-_Submitted by 0xA5DF, also found by \_\_141345\_\__
+*Submitted by 0xA5DF, also found by \_\_141345\_\_*
 
 `liquidateClean` doesn't check that the amount of shares the liquidator repays are covered by the collateral available, if the user repays more shares than (equally worth) collateral available - he'll get only the amount of collateral available.
 
@@ -2272,7 +2272,7 @@ https://github.com/code-423n4/2022-08-frax/blob/c4189a3a98b38c8c962c5ea72f1a322f
     // back. This is the compiler's defense against contract upgrades and
     // pointer aliasing, and it cannot be disabled.
 ```
-https://github.com/OpenZeppelin/openzeppelin-contracts/blob/58f635312aa21f947cae5f8578638a85aa2519f5/contracts/security/ReentrancyGuard.sol#L23-L27
+https://github.com/OpenZeppelin/openzeppelin-contracts/blob/58f635312aa21f947cae5f8578638a85aa2519f5/contracts/security/ReentrancyGuard.sol#L23-L27<br>
 Use `uint256(1)` and `uint256(2)` for true/false to avoid a Gwarmaccess (**[100 gas](https://gist.github.com/IllIllI000/1b70014db712f8572a72378321250058)**) for the extra SLOAD, and to avoid Gsset (**20000 gas**) when changing from `false` to `true`, after having been `true` in the past
 
 *There are 9 instances of this issue:*
@@ -2386,7 +2386,7 @@ https://github.com/code-423n4/2022-08-frax/blob/c4189a3a98b38c8c962c5ea72f1a322f
 ## [G&#x2011;16]  Usage of `uints`/`ints` smaller than 32 bytes (256 bits) incurs overhead
 > When using elements that are smaller than 32 bytes, your contract’s gas usage may be higher. This is because the EVM operates on 32 bytes at a time. Therefore, if the element is smaller than that, the EVM must use more operations in order to reduce the size of the element from 32 bytes to the desired size.
 
-https://docs.soliditylang.org/en/v0.8.11/internals/layout_in_storage.html
+https://docs.soliditylang.org/en/v0.8.11/internals/layout_in_storage.html<br>
 Each operation involving a `uint8` costs an extra [**22-28 gas**](https://gist.github.com/IllIllI000/9388d20c70f9a4632eb3ca7836f54977) (depending on whether the other operand is also a variable of type `uint8`) as compared to ones involving `uint256`, due to the compiler having to clear the higher bits of the memory word before operating on the `uint8`, as well as the associated stack operations of doing so. Use a larger size then downcast where needed
 
 *There are 13 instances of this issue:*
